
FILE(GLOB HEADER_FILES "*.h")
FILE(GLOB SRC_LIST "*.c")

add_library(btf_di SHARED OBJECT ${SRC_LIST} ${HEADER_FILES})
add_library(btf_dl SHARED OBJECT ${SRC_LIST} ${HEADER_FILES})
#add_library(btf_zi SHARED OBJECT ${SRC_LIST} ${HEADER_FILES})
#add_library(btf_zl SHARED OBJECT ${SRC_LIST} ${HEADER_FILES})

IF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
  set_target_properties(btf_di PROPERTIES COMPILE_FLAGS "-fPIC")
  set_target_properties(btf_dl PROPERTIES COMPILE_FLAGS "-fPIC -DDLONG=ON")
  #set_target_properties(amd_zi PROPERTIES COMPILE_FLAGS "-fPIC -DZLONG=ON")
  #set_target_properties(amd_zl PROPERTIES COMPILE_FLAGS "-fPIC -DZLONG=ON -DDLONG=ON")
ENDIF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
